--- a/qm/src/main/webapp/WEB-INF/web.xml
+++ b/qm/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,29 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+    version="2.5">
+    <!-- Welcome list, test for available -->
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <listener>
+        <listener-class>com.xingcloud.qm.web.listener.QMStartServiceListener</listener-class>
+    </listener>
+
+    <listener>
+        <listener-class>com.xingcloud.qm.web.listener.QMShutDownListener</listener-class>
+    </listener>
+
+    <!-- Query master servlet -->
+    <servlet>
+        <servlet-name>QueryBossServlet</servlet-name>
+        <servlet-class>com.xingcloud.qm.web.servlet.QueryBossServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>QueryBossServlet</servlet-name>
+        <url-pattern>/q</url-pattern>
+    </servlet-mapping>
+
 </web-app>
