--- a/qm/src/main/webapp/WEB-INF/web.xml
+++ b/qm/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
   <!-- Welcome list, test for available -->
@@ -8,11 +9,13 @@
   </welcome-file-list>
 
   <listener>
-    <listener-class>com.xingcloud.qm.web.listener.QMStartServiceListener</listener-class>
+    <listener-class>com.xingcloud.qm.web.listener.QMStartServiceListener
+    </listener-class>
   </listener>
 
   <listener>
-    <listener-class>com.xingcloud.qm.web.listener.QMShutDownListener</listener-class>
+    <listener-class>com.xingcloud.qm.web.listener.QMShutDownListener
+    </listener-class>
   </listener>
 
   <!-- Query master servlet -->
