--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -142,16 +142,6 @@
       <version>1.2.17</version>
     </dependency>
     <dependency>
-      <groupId>hadoop-core</groupId>
-      <artifactId>hadoop-core</artifactId>
-      <version>0.20</version>
-    </dependency>
-    <dependency>
-      <groupId>guava-r09-jarjar</groupId>
-      <artifactId>guava-r09-jarjar</artifactId>
-      <version>1.0</version>
-    </dependency>
-    <dependency>
       <groupId>com.xingcloud</groupId>
       <artifactId>basis</artifactId>
       <version>0.0.5</version>
@@ -165,6 +155,13 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
+    </dependency>
+
+    <!-- Drill -->
+    <dependency>
+      <groupId>org.apache.drill</groupId>
+      <artifactId>common</artifactId>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
