--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -102,6 +102,16 @@
 
     <!-- Common usage -->
     <dependency>
+      <groupId>net.sf.jgrapht</groupId>
+      <artifactId>jgrapht</artifactId>
+      <version>0.8.3</version>
+    </dependency>
+    <dependency>
+      <groupId>jgraph</groupId>
+      <artifactId>jgraph</artifactId>
+      <version>5.13.0.0</version>
+    </dependency>
+    <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
       <version>3.2.1</version>
@@ -149,7 +159,7 @@
     <dependency>
       <groupId>com.xingcloud</groupId>
       <artifactId>cache</artifactId>
-      <version>0.0.4</version>
+      <version>0.0.5</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -161,6 +171,11 @@
     <dependency>
       <groupId>org.apache.drill</groupId>
       <artifactId>common</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.drill.exec</groupId>
+      <artifactId>java-exec</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
