--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -22,6 +22,10 @@
       <url>http://xamavenrepo:8044/archiva/repository/internal</url>
       <layout>default</layout>
     </repository>
+    <repository>
+      <id>cloudera</id>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
+    </repository>
   </repositories>
   <name>XAQueryMaster</name>
   <!-- Building config -->
@@ -83,6 +87,32 @@
 
   <!-- Dependencies -->
   <dependencies>
+    <!-- Hadoop, HDFS, Hbase, ZK -->
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-client</artifactId>
+      <version>2.0.0-cdh4.3.0</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>hadoop-mapreduce-client-app</artifactId>
+          <groupId>org.apache.hadoop</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>hadoop-yarn-api</artifactId>
+          <groupId>org.apache.hadoop</groupId>
+        </exclusion>
+        <exclusion>
+          <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
+          <groupId>org.apache.hadoop</groupId>
+        </exclusion>
+        <!--
+        <exclusion>
+          <artifactId>hadoop-mapreduce-client-core</artifactId>
+          <groupId>org.apache.hadoop</groupId>
+        </exclusion>
+        -->
+      </exclusions>
+    </dependency>
     <!-- Mail service -->
     <dependency>
       <groupId>com.sun.mail</groupId>
