--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -53,8 +53,6 @@
           <configuration>
             <source>1.7</source>
             <target>1.7</target>
-            <fork>true</fork>
-            <executable>true</executable>
           </configuration>
         </plugin>
         <plugin>
@@ -211,13 +209,25 @@
     <dependency>
       <groupId>org.apache.drill</groupId>
       <artifactId>common</artifactId>
+      <classifier>rebuffed</classifier>
       <version>1.0-SNAPSHOT</version>
+      <exclusions>
+      	<exclusion>
+          <groupId>com.google.protobuf</groupId>
+          <artifactId>protobuf-java</artifactId>
+      	</exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.drill.exec</groupId>
       <artifactId>java-exec</artifactId>
+      <classifier>rebuffed</classifier>
       <version>1.0-SNAPSHOT</version>
       <exclusions>
+      	<exclusion>
+          <groupId>com.google.protobuf</groupId>
+          <artifactId>protobuf-java</artifactId>
+      	</exclusion>
         <exclusion>
           <artifactId>servlet-api</artifactId>
           <groupId>javax.servlet</groupId>
