--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -37,7 +37,7 @@
       <resource>
         <directory>${project.basedir}/src/main/resources</directory>
         <includes>
-          <include>*.xml</include>
+          <include>*</include>
         </includes>
       </resource>
       <resource>
