support qm.properties config for QueryMaster planmerge parameters.

--- a/qm/src/test/resources/qm.properties
+++ b/qm/src/test/resources/qm.properties
@@ -1,3 +1,16 @@
 #drill execution timeout, in millisec
 drill.exec.timeout=10000
 qm.tempdir=/tmp/
+
+#同时最多允许多少个plan执行
+qm.maxplan.total=16
+
+#每个project，同时最多允许多少个plan执行
+qm.maxplan.perproject=1
+
+#最多允许多少个plan一起合并
+qm.maxplan.permerge=65536
+
+#最多允许的合并后的plan的cost。目前，单个原始查询的cost为1。
+qm.maxcost=256
+
