--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -165,25 +165,28 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+    </dependency>
+
+    <!-- XA -->
     <dependency>
       <groupId>com.xingcloud.xa</groupId>
       <artifactId>confutil</artifactId>
       <version>1.1</version>
     </dependency>
     <dependency>
+      <groupId>com.xingcloud.xa</groupId>
+      <artifactId>main-cache-service</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.xingcloud</groupId>
       <artifactId>basis</artifactId>
       <version>0.0.5</version>
-    </dependency>
-    <dependency>
-      <groupId>com.xingcloud</groupId>
-      <artifactId>cache</artifactId>
-      <version>0.0.5</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
     </dependency>
 
     <!-- Drill -->
