--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -126,6 +126,11 @@
       <version>5.13.0.0</version>
     </dependency>
     <dependency>
+        <groupId>org.tinyjee.jgraphx</groupId>
+        <artifactId>jgraphx</artifactId>
+        <version>2.0.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
       <version>3.2.1</version>
