--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -289,5 +289,57 @@
       <artifactId>fluent-hc</artifactId>
       <version>4.2.5</version>
     </dependency>
+    <dependency>
+        <groupId>com.xingcloud.xa</groupId>
+        <artifactId>common</artifactId>
+        <version>1.0</version>
+    </dependency>
+    <dependency>
+        <groupId>net.sf.ehcache</groupId>
+        <artifactId>ehcache-core</artifactId>
+        <version>2.5.1</version>
+    </dependency>
+    <dependency>
+        <groupId>com.xingcloud.xa</groupId>
+        <artifactId>basis</artifactId>
+        <version>1.0</version>
+    </dependency>
+      <!--
+      <dependency>
+        <groupId>com.xingcloud</groupId>
+        <artifactId>cache</artifactId>
+        <version>0.0.5</version>
+      </dependency>
+      -->
+      <dependency>
+          <groupId>com.xingcloud.xa</groupId>
+          <artifactId>main-cache-service</artifactId>
+          <version>1.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.xingcloud.xa</groupId>
+          <artifactId>confutil</artifactId>
+          <version>1.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.xingcloud.xa</groupId>
+          <artifactId>dbutil</artifactId>
+          <version>1.3</version>
+      </dependency>
+      <dependency>
+          <groupId>com.xingcloud.xa</groupId>
+          <artifactId>hashutil</artifactId>
+          <version>1.2</version>
+      </dependency>
+      <dependency>
+          <groupId>com.xingcloud.xa</groupId>
+          <artifactId>event-service</artifactId>
+          <version>1.1</version>
+      </dependency>
+      <dependency>
+          <groupId>com.xingcloud.xa</groupId>
+          <artifactId>mongodb</artifactId>
+          <version>1.0</version>
+      </dependency>
   </dependencies>
 </project>
