--- a/qm/src/main/resources/production/drill-module-15.conf
+++ b/qm/src/main/resources/production/drill-module-15.conf
@@ -15,8 +15,8 @@ drill.exec: {
   },
   
   zk: {
-	connect: "node14:2181",
-	root: "/drill",
+	connect: "ELEX-LA-WEB1:2181",
+	root: "/drill/node14",
 	refresh: 500,
 	timeout: 1000,
   	retry: {
