--- a/qm/src/main/resources/pre_production/drill-module-07.conf
+++ b/qm/src/main/resources/pre_production/drill-module-07.conf
@@ -15,8 +15,8 @@ drill.exec: {
   },
   
   zk: {
-	connect: "node7:2181",
-	root: "/home/hadoop/Drill/drill",
+	connect: "ELEX-LA-WEB1:2181",
+	root: "/drill/node7",
 	refresh: 500,
 	timeout: 1000,
   	retry: {
