test For sample

--- a/qm/src/main/webapp/WEB-INF/web.xml
+++ b/qm/src/main/webapp/WEB-INF/web.xml
@@ -23,9 +23,17 @@
     <servlet-name>QueryBossServlet</servlet-name>
     <servlet-class>com.xingcloud.qm.web.servlet.QueryBossServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>ListTasks</servlet-name>
+    <servlet-class>com.xingcloud.qm.web.servlet.ListTaskQueueServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>QueryBossServlet</servlet-name>
     <url-pattern>/q</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+      <servlet-name>ListTasks</servlet-name>
+      <url-pattern>/lt</url-pattern>
   </servlet-mapping>
 
 </web-app>
