--- a/qm/src/main/resources/test/drill-module-01.conf
+++ b/qm/src/main/resources/test/drill-module-01.conf
@@ -15,8 +15,8 @@ drill.exec: {
   },
   
   zk: {
-	connect: "10.1.1.221:2181",
-	root: "/drill",
+	connect: "test_namenode:2181",
+	root: "/drill/node1",
 	refresh: 500,
 	timeout: 1000,
   	retry: {
