--- a/qm/src/test/resources/drill-module-01.conf
+++ b/qm/src/test/resources/drill-module-01.conf
@@ -15,7 +15,7 @@ drill.exec: {
   },
   
   zk: {
-	connect: "ELEX-LA-WEB1:2181",
+	connect: "test_namenode:2181",
 	root: "/drill/node1",
 	refresh: 500,
 	timeout: 1000,
