--- a/qm/src/main/resources/test/drill-module-01.conf
+++ b/qm/src/main/resources/test/drill-module-01.conf
@@ -1,5 +1,5 @@
-//  This file tells Drill to consider this module when class path scanning.  
-//  This file can also include any supplementary configuration information.  
+//  This file tells Drill to consider this module when class path scanning.
+//  This file can also include any supplementary configuration information.
 //  This file is in HOCON format, see https://github.com/typesafehub/config/blob/master/HOCON.md for more information.
 
 drill.logical.function.packages += "org.apache.drill.exec.expr.fn.impl"
@@ -13,19 +13,19 @@ drill.exec: {
   optimizer: {
     implementation: "org.apache.drill.exec.opt.IdentityOptimizer"
   },
-  
+
   zk: {
-	connect: "10.1.1.221:2181",
-	root: "/drill",
+	connect: "namenode:2181",
+	root: "/drill/node1",
 	refresh: 500,
 	timeout: 1000,
   	retry: {
   	  count: 7200,
   	  delay: 500
-  	}    
+  	}
   },
   functions: ["org.apache.drill.expr.fn.impl","org.apache.drill.exec.physical.impl.eval.fn"],
-  
+
   network: {
     start: 35000
   }
