Remove useless files.

--- a/qm/src/main/resources/production/drill-module-00.conf
+++ b/qm/src/main/resources/production/drill-module-00.conf
@@ -15,7 +15,7 @@ drill.exec: {
   },
   
   zk: {
-	connect: "ELEX-LA-WEB1:2181",
+	connect: "ZOOKEEPER:2181",
 	root: "/drill/node0",
 	refresh: 500,
 	timeout: 1000,
