--- a/qm/pom.xml
+++ b/qm/pom.xml
@@ -52,8 +52,8 @@
           <configuration>
             <verbose>true</verbose>
             <executable>/usr/java/jdk1.7.0_25/bin/javac</executable>
-            <source>1.7</source>
-            <target>1.7</target>
+            <!--<source>1.7</source>-->
+            <!--<target>1.7</target>-->
           </configuration>
         </plugin>
         <plugin>
