--- a/qm/src/main/resources/qm.properties
+++ b/qm/src/main/resources/qm.properties
@@ -1,5 +1,5 @@
 #drill execution timeout, in millisec
 drill.exec.timeout=3600000
 qm.tempdir=/tmp/
-qm.using_cache=true
-qm.write_plans=false
+qm.using_cache=false
+qm.write_plans=true
